<https://bugs.webkit.org/show_bug.cgi?id=119913> Baseline JIT gives erroneous error message that an object is not a constructor though it expects a function

Reviewed by Michael Saboff.

* jit/JITStubs.cpp:
(JSC::DEFINE_STUB_FUNCTION):



Canonical link: https://commits.webkit.org/137879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154204 268f45cc-cd09-0410-ab3c-d52691b4dbfc